# Irlos-CUI

./: Cargo.toml  README.md  irlos-cui.py  irloscui.py
irlos-dashboard/: Makefile  README.md  go.mod  go.sum
irlos-dashboard/cmd/irlosd/: main.go
irlos-dashboard/internal/config/: atomic.go  irlos.go  irlos_internal_test.go  irlos_test.go  noalbs.go  noalbs_internal_test.go  noalbs_test.go  obs.go  obs_internal_test.go  obs_test.go
irlos-dashboard/internal/journal/: tail.go
irlos-dashboard/internal/model/: messages.go  model.go  staged.go  state.go  tabs.go
irlos-dashboard/internal/poll/: cpu.go  gpu.go  mem.go  poll.go  sls.go  systemd.go
irlos-dashboard/internal/ui/: bar.go  config.go  header.go  logs.go  nav.go  noalbs.go  obs.go  overlay.go  popup.go  stream.go  styles.go  sysinfo.go  vnc.go
irlos-tui/: Cargo.toml
irlosd/: Cargo.toml
irlosd/src/: srt.conf  switcher.conf
